Issue of overlapping on testimonial slides has been fixed, and implemented autoplay functionality.

--- a/src/Pages/Home/Testimonial/styles.css
+++ b/src/Pages/Home/Testimonial/styles.css
@@ -1,21 +1,3 @@
-/* #app {
-  height: 100%;
-}
-html,
-body {
-  position: relative;
-  height: 100%;
-} */
-/* 
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-} */
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -26,7 +8,15 @@ body {
   background-size: cover;
 }
 
-.swiper-slide img {
+/* .swiper-slide img {
   display: block;
   width: 100%;
+} */
+
+.swiper-slide {
+  opacity: 0 !important;
+}
+
+.swiper-slide-active {
+  opacity: 1 !important;
 }
